# learn_python

./: .gitignore  README.md  pyproject.toml  start.sh
.github/: copilot-instructions.md
.github/prompts/: fileclass.prompt.md
src/p2/: __init__.py  bot.py  dir.py  matrix.py  mdiagrams.py  monitoring.py  mprint.py  notebook1.py  test_class.py
